[tool.poetry]
name = "ffmpeg_api"
version = "0.1.0"
description = ""
authors = ["Cameron Harris <charris@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.13.4"
fastapi = "^0.65.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
